--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.20.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "express": "^4.9.8",
@@ -20,7 +21,9 @@
     "serve-static": "^1.10.0",
     "vue": "^2.6.11",
     "vue-image-upload-resize": "^2.3.0",
+    "vue-nav-tabs": "^0.5.7",
     "vue-router": "^3.2.0",
+    "vue-tabs-component": "^1.5.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
