--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "app-quarter",
+  "name": "Mondelez-Vaganza",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode production",
     "start": "node server.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -20,9 +20,11 @@
     "register-service-worker": "^1.7.1",
     "serve-static": "^1.10.0",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-image-upload-resize": "^2.3.0",
     "vue-nav-tabs": "^0.5.7",
     "vue-router": "^3.2.0",
+    "vue-slick-carousel": "^1.0.6",
     "vue-tabs-component": "^1.5.0",
     "vuex": "^3.4.0"
   },
