--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.9.8",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "qrcode": "^1.4.4",
     "register-service-worker": "^1.7.1",
     "serve-static": "^1.10.0",
     "vue": "^2.6.11",
@@ -24,6 +25,7 @@
     "vue-expandable-image": "^0.1.0",
     "vue-image-upload-resize": "^2.3.0",
     "vue-nav-tabs": "^0.5.7",
+    "vue-qrcode": "^0.4.0",
     "vue-router": "^3.2.0",
     "vue-slick-carousel": "^1.0.6",
     "vue-tabs-component": "^1.5.0",
